[project]
name = "comfyui-klein-photoreal-promptbuilder"
version = "0.0.4"
description = "Structured photorealistic prompt builder for FLUX Klein 9B in ComfyUI"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/artokun/ComfyUI-Photoreal-Prompt-Builder"
Issues = "https://github.com/artokun/ComfyUI-Photoreal-Prompt-Builder/issues"

[tool.comfy]
PublisherId = "artokun"
DisplayName = "Photoreal Prompt Builder"
Icon = ""
